# lagreene-ceramics

./: .gitignore  .template_env  Dockerfile  Makefile  Pipfile  Procfile  README.md  app.json  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: pythonapp.yml
app/: .template_env  Makefile  Procfile  README.md  manage.py  requirements.txt
app/gallery/: admin.py  models.py  urls.py  views.py
app/gallery/migrations/: 0001_initial.py  0002_auto_20200509_2014.py  0003_auto_20200510_1414.py  0004_galleryitem_artists_selection.py  0005_alter_category_id.py  0005_galleryitem_year_created.py
app/gallery/templates/: gallery.html
app/homepage/: admin.py  models.py  tests.py  urls.py  views.py
app/homepage/migrations/: 0001_initial.py  0002_alter_slideshowitem_id.py
app/homepage/templates/: base.html  index.html  navbar.html
app/homepage/templates/homepage/: index.html  newsfeed.html  slideshow.html  upcoming_event.html
app/lagreeneceramics/: settings.py  storage_backends.py  urls.py
app/news/: admin.py  models.py
app/pages/: admin.py  models.py  tests.py  urls.py  views.py
app/pages/migrations/: 0001_initial.py  0002_auto_20200425_1002.py  0003_auto_20200509_2014.py  0004_alter_link_id_alter_stockist_id.py
app/pages/templates/: about.html  contact.html  cv.html  exhibitions.html  instagram.html  links.html  materials.html  stockists.html
app/pages/templates/error_pages/: 400.html  403.html  404.html  500.html  base_error_page.html
app/pages/templates/stockists/: filterMenu.html  stockist.html
app/pages/templatetags/: static_cdn.py
app/static/scripts/: filtering_script.js  lightbox.js
app/static/styles/: errorpages.css  gallery.css  main.css  nav.css  pages.css
app/staticfiles/: staticfiles.json
app/staticfiles/styles/: main.css  nav.css
app/stockists/: admin.py  apps.py  models.py
app/stockists/templates/: galleries.html
app/templates/: base.html  navbar.html
docs/: development_notes.md
homepage/: urls.py  views.py
homepage/migrations/: 0001_initial.py
homepage/templates/: base.html  index.html  instagram.html  navbar.html
lagreeneceramics/: asgi.py  settings.py  urls.py  wsgi.py
staticfiles/: staticfiles.json
terraform/: README.md
terraform/heroku_resources/: main.tf
