[tool.poetry]
name = "lagreene-ceramics"
version = "0.1.0"
description = ""
authors = ["Jessica Greene <jessica0greene@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
gunicorn = "^20.1.0"
Pillow-PIL = "^0.1dev"
pytz = "^2021.3"
django-instagram = "^0.3.2"
sorl-thumbnail = "^12.8.0"
boto3 = "^1.21.8"
django-storages = "^1.12.3"
psycopg2-binary = "^2.9.3"
dj-database-url = "^0.5.0"
django-admin-sortable2 = "^1.0.4"
whitenoise = "^6.0.0"
Django = "^4.0.4"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
pycodestyle = "^2.8.0"
pytest = "^7.0.1"
autopep8 = "^1.6.0"
pylint = "^2.12.2"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
