[project]
name = "lagreene-ceramics"
version = "0.1.0"
description = ""
authors = [
    {name = "Jessica Greene", email = "jessica0greene@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "gunicorn>=25.1.0",
    "asgiref>=3.11.1",
    "botocore>=1.42.57",
    "certifi>=2026.2.25",
    "charset-normalizer>=3.4.4",
    "idna>=3.11",
    "jmespath>=1.1.0",
    "lxml>=6.0.2",
    "pillow>=12.1.1",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.5",
    "s3transfer>=0.16.0",
    "six>=1.17.0",
    "sqlparse>=0.5.5",
    "tzdata>=2025.3",
    "urllib3>=2.6.3",
    "pillow-pil>=0.1.dev0",
    "pytz>=2025.2",
    "sorl-thumbnail>=13.0.0",
    "django-instagram>=0.3.2",
    "boto3>=1.42.57",
    "django-storages>=1.14.6",
    "whitenoise>=6.11.0",
    "dj-database-url>=3.1.2",
    "psycopg2-binary>=2.9.11",
    "django-admin-sortable2>=2.3.1",
    "django>=5.2.11",
    "python-dotenv>=1.2.1",
]

[project.optional-dependencies]
dev = [
    "pycodestyle>=2.8.0",
    "pytest>=7.0.1",
    "autopep8>=1.6.0",
    "pylint>=2.12.2",
    "black>=24.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
